# gta-5-native-documentation-generator

./: .gitignore  Cargo.toml  README.md
crates/nativedocgen/: Cargo.toml
crates/nativedocgen-model/: Cargo.toml
crates/nativedocgen-model/src/: lib.rs
crates/nativedocgen/src/: json.rs  main.rs
crates/nativedocgen/src/parser/: mod.rs  model.rs
src/: crossmap.rs  json.rs  main.rs
src/parser/: mod.rs  model.rs
