[package]
name = "nativedocgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive"] }
glob = "0.3.0"
peg = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
